[package]
name = "focus_other_display"
version = "0.1.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[dependencies]
core-graphics = "0.25"
core-graphics-types = "0.2"
core-foundation = "0.10"
cocoa = "0.26"
objc = "0.2"
